Fixed cut off home page content
- Fixed cut off home page content

--- a/Portfolio/src/App.css
+++ b/Portfolio/src/App.css
@@ -88,6 +88,8 @@ html, body {
   outline-width: 5px;
   outline-style: outset;
   padding: 20px;
+  width: 100%;
+  height: auto;
 }
 
 .profile-content {
